# ocaml-faad

./: .gitignore  CHANGES  Makefile.in  README  config.h.in  configure.ac  dune-project  faad.opam
example/: Makefile  aac2wav.ml
src/: META  META.in  Makefile  Makefile.in  README  drms.c  dune  faad.ml  faad.mli  faad_stubs.c  mp4atom.c  mp4ff.c  mp4ff.h  mp4ffint.h  mp4meta.c  mp4tagupdate.c  mp4util.c
src/config/: discover.ml
