opam-version: "2.0"
version: "dev"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-faad"
bug-reports: "https://github.com/savonet/ocaml-faad/issues"
depends: ["ocaml" "ocamlfind"]
flags: light-uninstall
build: [
  ["./bootstrap"]
  ["./configure" "--prefix" prefix] {os != "macos"}
  [
    "./configure"
    "CFLAGS=-I/usr/local/include"
    "LDFLAGS=-L/usr/local/lib"
    "OCAMLFLAGS=-ccopt -I/usr/local/include -cclib -L/usr/local/lib"
    "--prefix"
    prefix
  ] {os = "macos"}
  [make "clean"]
  [make]
]
install: [make "install"]
remove: ["ocamlfind" "remove" "faad"]
depexts: [
  ["libfaad-dev"] {os-distribution = "debian"}
  ["libfaad-dev"] {os-distribution = "ubuntu"}
  ["faad2"] {os = "macos" & os-distribution = "homebrew"}
]
dev-repo: "git+https://github.com/savonet/ocaml-faad.git"
