opam-version: "2.0"
name: "faad"
version: "0.5.0"
maintainer: "Romain Beauxis <toots@rastageeks.org>"
authors: "The Savonet Team <savonet-users@lists.sourceforge.net>"
homepage: "https://github.com/savonet/ocaml-faad"
bug-reports: "https://github.com/savonet/ocaml-faad/issues"
depends: [
  "ocaml"
  "ocamlfind" {build}
  "base-bytes"
]
build: [
  ["./bootstrap"] {dev}
  ["./configure" "--prefix" prefix] {os != "macos"}
  [
    "./configure"
    "CFLAGS=-I/usr/local/include"
    "LDFLAGS=-L/usr/local/lib"
    "OCAMLFLAGS=-ccopt -I/usr/local/include -cclib -L/usr/local/lib"
    "--prefix"
    prefix
  ] {os = "macos"}
  [make "clean"] {dev}
  [make]
]
install: [make "install"]
depexts: [
  ["faad2-dev"] {os-distribution = "alpine"}
  ["faad2"] {os-distribution = "arch"}
  ["faad2-devel"] {os-distribution = "centos"}
  ["faad2-devel"] {os-distribution = "fedora"}
  ["faad2-devel"] {os-family = "suse"}
  ["libfaad-dev"] {os-family = "debian"}
  ["faad2"] {os = "macos" & os-distribution = "homebrew"}
]
dev-repo: "git+https://github.com/savonet/ocaml-faad.git"
synopsis:
  "Bindings for the faad library which provides functions for decoding AAC audio files"
