(library
 (name faad)
 (public_name faad)
 (synopsis "Ocaml bindings to libfaad")
 (foreign_stubs
  (language c)
  (names faad_stubs mp4atom mp4ff mp4meta mp4sample mp4tagupdate mp4util)
  (flags
   -DUSE_TAGGING
   (:include c_flags.sexp)))
 (c_library_flags
  (:include c_library_flags.sexp)))

(rule
 (targets c_flags.sexp c_library_flags.sexp)
 (action
  (run ./config/discover.exe)))
